svc-streamer.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-streamer-service
spec:
  selector:
    app: k8s-streamer
  ports:
    - name: rtmp
      protocol: TCP
      port: 1935
      targetPort: 1935
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
